@@ -21,9 +21,9 @@ SUBROUTINES
   "is_json_type"
      is_json_type($json, $expected_type_hr, $test_name);
 
-    This decoded $json JSON string to Perl structure and return data type
-    structure defined by Cpanel::JSON::XS::Type. Compare this structure with
-    $expected_type_hr, if are same.
+    This decodes $json JSON string to Perl structure and encode with
+    expected JSON type $expected_type_hr. Compare these two JSON strings and
+    check if are same.
 
     Result is success or failure of this comparison. In case of failure
     print difference in test.
